[tool.poetry]
name = "python-testing-with-pytest-book"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "3.8.3"
pytest = "^5.4.2"
pytest-cov = "2.9.0"
pytest-isort = "1.0.0"
mypy = "0.770"
isort = {version = "*", extras = ["pyproject"]}
flake8 = "3.8.2"
black = "19.10b0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
